# agent-parksuit

./: .env.example  .gitignore  DEV_NOTES.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260223_0001_biz_init_schema.py  20260223_0002_rag_init_schema.py
data/rag000/: scenarios.jsonl
data/rag006/: README.md  eval_queries.jsonl
data/rag009/: README.md  memory_acceptance_cases.jsonl
docs/: manual_e2e_answer_tests.md  pr_acceptance.md  rag006_eval_plan.md  rag_ingestion.md  testing.md
scripts/: rag000_seed_biz_scenarios.py  rag002_ingest_knowledge.py  rag006_run_eval.py  rag009_replay_memory_acceptance.py
src/agent_parksuite_biz_api/: config.py  main.py
src/agent_parksuite_biz_api/api/: routes.py
src/agent_parksuite_biz_api/db/: models.py  session.py
src/agent_parksuite_biz_api/schemas/: billing.py  order.py
src/agent_parksuite_common/: __init__.py  llm_payload.py  observability.py
src/agent_parksuite_eval/: __init__.py  memory_replay.py  runner.py  schemas.py
src/agent_parksuite_rag_core/: config.py  main.py
tests/biz_api/: conftest.py  test_billing_engine.py  test_routes_billing_integration.py  test_routes_orders_integration.py
tests/rag_core/: conftest.py  test_ingestion_pipeline_unit.py  test_intent_slot_resolver_unit.py  test_react_clarify_gate_unit.py  test_routes_answer_integration.py  test_routes_hybrid_integration.py  test_routes_hybrid_memory_integration.py  test_routes_rag.py  test_routes_retrieve.py  test_routes_retrieve_semantic.py  test_session_queue_unit.py  test_smoke.py  test_smoke_unit.py
(+33 files in other folders)
